# rusty-snake

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build_web.py  rusty_snake.js  serve.py
.claude/: settings.json
.github/workflows/: deploy.yml
src/: config.rs  game.rs  main.rs
src/game/: plugins.rs  state.rs
src/game/food/: plugins.rs  systems.rs
src/game/food/systems/: eat.rs  spawn.rs
src/game/grid/: components.rs  plugins.rs  systems.rs
src/game/grid/systems/: base_sprites.rs  spawn_board.rs  spawn_frame.rs  sync.rs
src/game/snake/: components.rs  constants.rs  plugins.rs  systems.rs
src/game/snake/systems/: animation.rs  collision.rs  input.rs  movement.rs  spawn.rs  touch.rs
src/game/ui/: components.rs  plugins.rs  resources.rs  systems.rs
src/game/ui/systems/: buttons.rs  game_over.rs  hints.rs  menu.rs  pause.rs  spawn.rs  update.rs
web/: index.html
