[package]
name = "rusty_snake"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", features = ["dynamic_linking"] }
derive_more = { version = "2.1.1", features = ["add", "mul", "deref", "deref_mut"] }
rand = "0.10.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
