[package]
name = "rusty_snake"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bevy = { version = "0.19.0", features = ["touch"] }
derive_more = { version = "2.1.1", features = ["add", "mul", "deref", "deref_mut"] }
rand = "0.10.2"
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
default = ["dev"]
# Fast incremental builds for local development; must be disabled for release/wasm builds.
dev = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Size-optimized release build. A default release Bevy wasm bundle is 100MB+
# (over GitHub's 100MB file limit); LTO + size opt + strip bring it down to a
# few tens of MB. Install binaryen's `wasm-opt` for a further ~2x — build_web.py
# runs it automatically when it's on PATH.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
